updated comment refiner
