# app/api/src/services/book/comment/create.js
@@ -1,17 +1,22 @@
 const { comment: commentRefiner } = require("../../../../db/MySQL/refines");
 
 module.exports = async (req, res, next) => {
-  const { content, repliesTo } = req.body;
+  const { authenticatedUser } = res;
+
+  const { content } = req.body;
 
   const {
-    chainData: { book },
+    chainData: { book, comment: { id: repliesTo } = {} },
   } = res;
 
   const defaultOption = {
     content,
     repliesTo,
   };
+
   const comment = await book.createComment(defaultOption);
+
+  await comment.setUser(authenticatedUser.id);
 
   res.jsonData = commentRefiner(comment);
   next();
