# app/api/src/services/book/comment/list.js
@@ -1,33 +1,59 @@
-const { bookCommentList } = require("../../../../db/MySQL/refines");
+const { Op } = require("sequelize");
+const { commentList } = require("../../../../db/MySQL/refines");
 const { User } = require("../../../../db/MySQL/models");
+
 module.exports = async (req, res, next) => {
+  const { s: search } = req.query;
+
   const {
     chainData: { book },
+    dbOptions: {
+      defaultOptions,
+      paginationedOptions: { limit, offset },
+    },
+    sortOptions,
   } = res;
 
-  const {
-    dbOptions: { defaultOptions, paginationedOptions },
-  } = res;
+  let searchOption;
 
-  const { sortOptions } = res;
+  if (search) {
+    searchOption = {
+      where: {
+        [Op.or]: {
+          firstName: { [Op.like]: `%${search}%` },
+          lastName: { [Op.like]: `%${search}%` },
+        },
+      },
+    };
+  }
 
   const comments = await book.getComments({
-    paginationedOptions,
     order: sortOptions,
     include: [
       {
         model: User,
+        ...searchOption,
+      },
+    ],
+    limit,
+    offset,
+  });
+
+  const totalComments = await book.getComments({
+    include: [
+      {
+        model: User,
+        ...searchOption,
       },
     ],
   });
 
-  const totalComments = await book.getComments(defaultOptions);
-
   const responseBody = {
-    data: bookCommentList(comments),
+    data: commentList(comments),
     total: totalComments && totalComments.length,
   };
 
   res.jsonData = responseBody;
+
   next();
 };
